Added menus and tasks

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <div class="menu" id = "btnRow">
         <button id = "hide" class="btn color-white"><i class="fa-sharp fa-regular fa-arrow-right fa-rotate-270" style="font-size: 20px;"></i></button>
-        <button class="btn btn-text color-white noselect"  id="task1">Task 1</button>
-        <button class="btn btn-text color-white noselect"  id="task2">Task 2</button>
-        <button class="btn btn-text color-white noselect" id="task3">Custom from file</button>
+        <button class="btn btn-text color-white"  id="task1">Task 1</button>
+        <button class="btn btn-text color-white"  id="task2">Task 2</button>
+        <button class="btn btn-text color-white" id="task3">Custom from file</button>
     </div>
 
 <!-- Right Menu -->
