Added timer and localstorage

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta char="UTF-8">
     <title>Keyboard Trainer</title>
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="style.css">
@@ -51,12 +51,11 @@
     <div id = "text"></div>
     </div>
     <div class="text-center color-white" id="errorCounterField"></div>
+    <div id="timerField" class="text-center color-white">Timer</div>
  </div>
 
  <div class="adminMenu">
  <button onclick="localStorage.clear()">Reset LS</button>
- <button id="alertData">Alert LS</button>
- <button id="resetScreen">RS Screen</button>
 </div>
 </body>
 <footer>
