added new modal

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
 <div class = "alertBox"></div>
 <div class = "confirmBox">
+    <button id ="tcwClose"><i class="fa-solid fa-xmark" style="font-size: 20px;"></i></button>
     <div class = "taskConfirmWindow">
         <div class = "sidesContainer">
         <div class = "tcwSideLeft">
