--- a/index.html
+++ b/index.html
@@ -138,8 +138,67 @@
     </div>
 </div>
 <div class = "askBox"></div>
-<div class = "keyboardContainer"></div>
-</body>
+<div class = "keyboardContainer">
+    <div class = "keyLine">
+        <div class="keyboardKey" id="key1">1</div>
+        <div class="keyboardKey" id="key1">2</div>
+        <div class="keyboardKey" id="key1">3</div>
+        <div class="keyboardKey" id="key1">4</div>
+        <div class="keyboardKey" id="key1">5</div>
+        <div class="keyboardKey" id="key1">6</div>
+        <div class="keyboardKey" id="key1">7</div>
+        <div class="keyboardKey" id="key1">8</div>
+        <div class="keyboardKey" id="key1">9</div>
+        <div class="keyboardKey" id="key1">0</div>
+    </div>
+    <div class = "keyLine">
+        <div class="keyboardKey" id="key1">q</div>
+        <div class="keyboardKey" id="key1">w</div>
+        <div class="keyboardKey" id="key1">e</div>
+        <div class="keyboardKey" id="key1">r</div>
+        <div class="keyboardKey" id="key1">t</div>
+        <div class="keyboardKey" id="key1">y</div>
+        <div class="keyboardKey" id="key1">u</div>
+        <div class="keyboardKey" id="key1">i</div>
+        <div class="keyboardKey" id="key1">o</div>
+        <div class="keyboardKey" id="key1">p</div>
+        <div class="keyboardKey" id="key1">[</div>
+        <div class="keyboardKey" id="key1">]</div>
+        <div class="keyboardKey" id="key1">\</div>
+    </div>
+
+    <div class = "keyLine">
+        <div class="keyboardKey" id="key1">a</div>
+        <div class="keyboardKey" id="key1">s</div>
+        <div class="keyboardKey" id="key1">d</div>
+        <div class="keyboardKey" id="key1">f</div>
+        <div class="keyboardKey" id="key1">g</div>
+        <div class="keyboardKey" id="key1">h</div>
+        <div class="keyboardKey" id="key1">j</div>
+        <div class="keyboardKey" id="key1">k</div>
+        <div class="keyboardKey" id="key1">l</div>
+        <div class="keyboardKey" id="key1">;</div>
+        <div class="keyboardKey" id="key1">'</div>
+    </div>
+
+    <div class = "keyLine">
+        <div class="keyboardKey" id="key1">z</div>
+        <div class="keyboardKey" id="key1">x</div>
+        <div class="keyboardKey" id="key1">c</div>
+        <div class="keyboardKey" id="key1">v</div>
+        <div class="keyboardKey" id="key1">b</div>
+        <div class="keyboardKey" id="key1">n</div>
+        <div class="keyboardKey" id="key1">m</div>
+        <div class="keyboardKey" id="key1">,</div>
+        <div class="keyboardKey" id="key1">.</div>
+        <div class="keyboardKey" id="key1">/</div>
+    </div>
+    <div class = "keyLine">
+        <div class="keyboardKey space" id="key1">_</div>
+
+    </div>
+</div>
+</body>s
 
 
 </div>
