--- a/index.html
+++ b/index.html
@@ -140,58 +140,58 @@
 <div class = "askBox"></div>
 <div class = "keyboardContainer">
     <div class = "keyLine">
-        <div class="keyboardKey" id="key1">1</div>
-        <div class="keyboardKey" id="key1">2</div>
-        <div class="keyboardKey" id="key1">3</div>
-        <div class="keyboardKey" id="key1">4</div>
-        <div class="keyboardKey" id="key1">5</div>
-        <div class="keyboardKey" id="key1">6</div>
-        <div class="keyboardKey" id="key1">7</div>
-        <div class="keyboardKey" id="key1">8</div>
-        <div class="keyboardKey" id="key1">9</div>
-        <div class="keyboardKey" id="key1">0</div>
+        <div class="keyboardKey">1</div>
+        <div class="keyboardKey">2</div>
+        <div class="keyboardKey">3</div>
+        <div class="keyboardKey">4</div>
+        <div class="keyboardKey">5</div>
+        <div class="keyboardKey">6</div>
+        <div class="keyboardKey">7</div>
+        <div class="keyboardKey">8</div>
+        <div class="keyboardKey">9</div>
+        <div class="keyboardKey">0</div>
     </div>
     <div class = "keyLine">
-        <div class="keyboardKey" id="key1">q</div>
-        <div class="keyboardKey" id="key1">w</div>
-        <div class="keyboardKey" id="key1">e</div>
-        <div class="keyboardKey" id="key1">r</div>
-        <div class="keyboardKey" id="key1">t</div>
-        <div class="keyboardKey" id="key1">y</div>
-        <div class="keyboardKey" id="key1">u</div>
-        <div class="keyboardKey" id="key1">i</div>
-        <div class="keyboardKey" id="key1">o</div>
-        <div class="keyboardKey" id="key1">p</div>
-        <div class="keyboardKey" id="key1">[</div>
-        <div class="keyboardKey" id="key1">]</div>
-        <div class="keyboardKey" id="key1">\</div>
-    </div>
-
-    <div class = "keyLine">
-        <div class="keyboardKey" id="key1">a</div>
-        <div class="keyboardKey" id="key1">s</div>
-        <div class="keyboardKey" id="key1">d</div>
-        <div class="keyboardKey" id="key1">f</div>
-        <div class="keyboardKey" id="key1">g</div>
-        <div class="keyboardKey" id="key1">h</div>
-        <div class="keyboardKey" id="key1">j</div>
-        <div class="keyboardKey" id="key1">k</div>
-        <div class="keyboardKey" id="key1">l</div>
-        <div class="keyboardKey" id="key1">;</div>
-        <div class="keyboardKey" id="key1">'</div>
+        <div class="keyboardKey">q</div>
+        <div class="keyboardKey">w</div>
+        <div class="keyboardKey">e</div>
+        <div class="keyboardKey">r</div>
+        <div class="keyboardKey">t</div>
+        <div class="keyboardKey">y</div>
+        <div class="keyboardKey">u</div>
+        <div class="keyboardKey">i</div>
+        <div class="keyboardKey">o</div>
+        <div class="keyboardKey">p</div>
+        <div class="keyboardKey">[</div>
+        <div class="keyboardKey">]</div>
+        <div class="keyboardKey">\</div>
     </div>
 
     <div class = "keyLine">
-        <div class="keyboardKey" id="key1">z</div>
-        <div class="keyboardKey" id="key1">x</div>
-        <div class="keyboardKey" id="key1">c</div>
-        <div class="keyboardKey" id="key1">v</div>
-        <div class="keyboardKey" id="key1">b</div>
-        <div class="keyboardKey" id="key1">n</div>
-        <div class="keyboardKey" id="key1">m</div>
-        <div class="keyboardKey" id="key1">,</div>
-        <div class="keyboardKey" id="key1">.</div>
-        <div class="keyboardKey" id="key1">/</div>
+        <div class="keyboardKey">a</div>
+        <div class="keyboardKey">s</div>
+        <div class="keyboardKey">d</div>
+        <div class="keyboardKey">f</div>
+        <div class="keyboardKey">g</div>
+        <div class="keyboardKey">h</div>
+        <div class="keyboardKey">j</div>
+        <div class="keyboardKey">k</div>
+        <div class="keyboardKey">l</div>
+        <div class="keyboardKey">;</div>
+        <div class="keyboardKey">'</div>
+    </div>
+
+    <div class = "keyLine">
+        <div class="keyboardKey">z</div>
+        <div class="keyboardKey">x</div>
+        <div class="keyboardKey">c</div>
+        <div class="keyboardKey">v</div>
+        <div class="keyboardKey">b</div>
+        <div class="keyboardKey">n</div>
+        <div class="keyboardKey">m</div>
+        <div class="keyboardKey">,</div>
+        <div class="keyboardKey">.</div>
+        <div class="keyboardKey">/</div>
     </div>
     <div class = "keyLine">
         <div class="keyboardKey space" id="key1">_</div>
