--- a/index.html
+++ b/index.html
@@ -61,23 +61,10 @@
                     Встроенные задания
                 </div>
                 <div class = "tasksField">
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-                    <button class="btn btnTask btn-text color-white btn-border"  id="task2">Упражнение 2</button>
+                    <button class="btn btnTask btn-text color-white"  id="task1">Случайные "а" и "о" Ур. 1</button>
+                    <button class="btn btnTask btn-text color-white"  id="task2">Случайные "а" и "о" Ур. 2</button>
+                    <button class="btn btnTask btn-text color-white"  id="task3">Случайные "а" и "о" Ур. 3</button>
+                    <button class="btn btnTask btn-text color-white"  id="task4">Упражнение 2</button>
                 </div>
                 <div class = "mmline color-white center-text" style="border-top: 1px solid var(--border-color);">
                     Созданные задания
@@ -103,42 +90,42 @@
                 </div>
         </div>
         <div class = "mmRightContainer"  id = "mmCreateTask">
-            <div class="mmline">
-                <div class = "center-text color-white">
-                    Создать задание
-                </div>
-            </div> 
-    
-            <div class = "customTaskPanel">
-                <div class="mmCustomTaskblock">
-                    <div class="center-text color-white">
-                    Количество ошибок: 
-                    </div>
-                <input id = "maximumErrors" type="number"  min="0" class="inputField" placeholder="Maximum errors(0 = OFF)">
-                <div class="center-text color-white">
-                    Название задания: 
-                    </div>
-                <input id = "taskName" type="text" class="inputField" placeholder="Task name">
-                <div class="center-text color-white">
-                    Время в секундах: 
-                    </div>
-                <input id = "timerTime" type="number" min="1" class="inputField" placeholder="Time in seconds">
-                </div>
-                <div class="mmCustomTaskblock">
-                <textarea id="taskTextField" cols="30" rows="10" placeholder="Task text" class="inputField"></textarea>
-                <button id = "customTaskSubmit" class="btn btn-text color-white">Создать задание</button>
-                </div>
-    
+            <div class = "mmCtTop">
+                <div class = "center-text color-white">Создать задание</div>
             </div>
-        </div>
+            <div class = "mmCtFieldsContainer">
+                <div class = "mmCtBlock">
+                    <div class="center-text color-white">Название задания</div>
+                    <input id = "taskName" type="text" class="inputField" placeholder="Название задания">
+                    </div>
+                <div class = "mmCtBlock">
+                    <div class="center-text color-white">Количество ошибок</div>
+                <input id = "maximumErrors" type="number"  min="0" class="inputField" placeholder="Макс. ошибок 0 = Выкл">
+            </div>
+                <div class = "mmCtBlock">
+                <div class="center-text color-white">Время в секундах</div>
+                <input id = "timerTime" type="number" min="1" class="inputField" placeholder="Время в сек.">
+                </div>
 
+                </div>
+                <div class="mmCtBlock2">
+                <div class="center-text color-white" style="width: 70%;">Текст задания</div>
+                <textarea id="taskTextField" cols="30" rows="10" placeholder="Текст задания" class="inputField"></textarea>
+                <button id = "customTaskSubmit" class="btn btn-text color-white">Создать задание</button>
+            </div>
+            </div>
         <div class = "mmRightContainer"  id = "mmInfo">
+            <div class = "mmCtTop">
+                <div class = "center-text color-white">Информация</div>
+            </div>
             <div class="mmInfoFooter center-text color-white">
                 Сергей Соколов 2023г.
             </div>
         </div>
         <div class = "mmRightContainer"  id = "mmSettings">
-            settings
+            <div class = "mmCtTop">
+                <div class = "center-text color-white">Настройки</div>
+            </div>
         </div>
     </div>
     </div>
@@ -147,59 +134,6 @@
         <button id = "mmCloseButton"><i class="fa-solid fa-xmark color-white center-text"></i></button>
     </div>
     </div>
-    <div class = "mainMenu2" style="visibility: hidden;">
-        <button id = "menuClose" style = "width: 100%;"  class="btn btn-text color-white" ><i class="fa-regular fa-chevron-up fa-rotate-180" style="font-size: 20px;"></i></button>
-        <div class="line">
-           <div class = "center-text color-white">
-            Статистика
-           </div>
-        </div>
-        <!-- Right Menu -->
-        <div class="line">
-            <div class = "center-text color-white">
-                Задания
-            </div>
-        </div>
-        <!-- Left Menu -->
-        <div class="taskLine">
-        <button class="btn btn-text color-white btn-border"  id="task1">Упражнение 1</button>
-        <button class="btn btn-text color-white btn-border"  id="task2">Упражнение 2</button>
-        </div>
-        <div class = "tasksScanField"></div>
-        <button class="btn btn-text color-white btn-border" id="scanTasks">Обновить задания</button>
-        <div class="line">
-            <div class = "center-text color-white">
-                Создать задание
-            </div>
-        </div> 
-
-        <div class = "customTaskPanel">
-            <div class="fields">
-            <div class="block">
-                <div class="center-text color-white">
-                Название задания: 
-                </div>
-            <input id = "taskName" type="text" class="inputField" placeholder="Task name">
-            </div>
-            <div class="block">
-                <div class="center-text color-white">
-                Количество ошибок: 
-                </div>
-            <input id = "maximumErrors" type="number"  min="0" class="inputField" placeholder="Maximum errors(0 = OFF)">
-            </div>
-            <div class="block">
-                <div class="center-text color-white">
-                Время в секундах: 
-                </div>
-            <input id = "timerTime" type="number" min="1" class="inputField" placeholder="Time in seconds">
-            </div>
-            </div>
-            <textarea id="taskTextField" cols="30" rows="10" placeholder="Task text" class="inputField"></textarea>
-            <button id = "customTaskSubmit" class="btn btn-text color-white">Создать задание</button>
-
-        </div>
-
-        </div>
    
  <!-- Text field -->
 
