--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <button class="btn btnTask btn-text color-white"  id="task1">Случайные "а" и "о" Ур. 1</button>
                     <button class="btn btnTask btn-text color-white"  id="task2">Случайные "а" и "о" Ур. 2</button>
                     <button class="btn btnTask btn-text color-white"  id="task3">Случайные "а" и "о" Ур. 3</button>
-                    <button class="btn btnTask btn-text color-white"  id="task4">Упражнение 2</button>
+                    <button class="btn btnTask btn-text color-white"  id="task4">Случайные ASCII символы</button>
                 </div>
                 <div class = "mmline color-white center-text" style="border-top: 1px solid var(--border-color);">
                     Созданные задания
